# auditorZK

./: .gitignore  README.md  TESTING.md
prover-client/: .env.example  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
prover-client/src/: app.css  app.tsx  index.html  worker.ts
verifier-server/: Cargo.toml
verifier-server/config/: notary_pubkey.pem
verifier-server/src/: attestation.rs  main.rs  plaid.rs  verifier.rs
