[package]
name = "auditor-zk-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
# TLSNotary core (use Git since not published on crates.io)
# tlsn = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.13" }
tlsn-core = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.12", package = "tlsn-core" }
tlsn-verifier = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.12", package = "tlsn-verifier" }
tlsn-common = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.12", package = "tlsn-common" }

# Async runtime
tokio = { version = "1.38", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = { version = "0.3" }

# WebSocket support for browser clients
tokio-tungstenite = "0.23"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography (for signing attestations)
k256 = { version = "0.13", features = ["ecdsa", "pem"] }
sha2 = "0.10"
hex = "0.4"

aes = "=0.9.0-rc.0"
cipher = "=0.5.0-rc.0"
crypto-common = "=0.2.0-rc.3"
inout = "=0.2.0-rc.5"